// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CompressionPlugin should run plugin against assets added later by plugins: assets 1`] = `
Array [
  Array [
    "main.js",
    1528,
    Object {
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.js.gz",
      },
      "size": 1528,
    },
  ],
  Array [
    "main.js.gz",
    496,
    Object {
      "compressed": true,
      "size": 496,
    },
  ],
  Array [
    "newFile.js",
    23,
    Object {
      "related": Object {
        "gzipped": "newFile.js.gz",
      },
      "size": 23,
    },
  ],
  Array [
    "newFile.js.gz",
    43,
    Object {
      "compressed": true,
      "size": 43,
    },
  ],
]
`;

exports[`CompressionPlugin should run plugin against assets added later by plugins: errors 1`] = `Array []`;

exports[`CompressionPlugin should run plugin against assets added later by plugins: warnings 1`] = `Array []`;

exports[`CompressionPlugin should work and do not use memory cache when the "cache" option is "false": assets 1`] = `
Array [
  Array [
    "icon.png",
    78117,
    Object {
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "icon.svg",
    672,
    Object {
      "related": Object {
        "gzipped": "icon.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "icon.svg.gz",
    393,
    Object {
      "compressed": true,
      "size": 393,
    },
  ],
  Array [
    "main.js",
    6071,
    Object {
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.js.gz",
      },
      "size": 6071,
    },
  ],
  Array [
    "main.js.gz",
    1594,
    Object {
      "compressed": true,
      "size": 1594,
    },
  ],
]
`;

exports[`CompressionPlugin should work and do not use memory cache when the "cache" option is "false": assets 2`] = `
Array [
  Array [
    "icon.png",
    78117,
    Object {
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "icon.svg",
    672,
    Object {
      "related": Object {
        "gzipped": "icon.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "icon.svg.gz",
    393,
    Object {
      "compressed": true,
      "size": 393,
    },
  ],
  Array [
    "main.js",
    6071,
    Object {
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.js.gz",
      },
      "size": 6071,
    },
  ],
  Array [
    "main.js.gz",
    1594,
    Object {
      "compressed": true,
      "size": 1594,
    },
  ],
]
`;

exports[`CompressionPlugin should work and do not use memory cache when the "cache" option is "false": errors 1`] = `Array []`;

exports[`CompressionPlugin should work and do not use memory cache when the "cache" option is "false": errors 2`] = `Array []`;

exports[`CompressionPlugin should work and do not use memory cache when the "cache" option is "false": warnings 1`] = `Array []`;

exports[`CompressionPlugin should work and do not use memory cache when the "cache" option is "false": warnings 2`] = `Array []`;

exports[`CompressionPlugin should work and keep assets info: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "main.86033a6cfb8a52bea939.js",
    6127,
    Object {
      "contenthash": "86033a6cfb8a52bea939",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.86033a6cfb8a52bea939.js.gz",
      },
      "size": 6127,
    },
  ],
  Array [
    "main.86033a6cfb8a52bea939.js.gz",
    1660,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 1660,
    },
  ],
]
`;

exports[`CompressionPlugin should work and keep assets info: errors 1`] = `Array []`;

exports[`CompressionPlugin should work and keep assets info: warnings 1`] = `Array []`;

exports[`CompressionPlugin should work and show compress assets in stats: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "main.js",
    6127,
    Object {
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.js.gz",
      },
      "size": 6127,
    },
  ],
  Array [
    "main.js.gz",
    1660,
    Object {
      "compressed": true,
      "size": 1660,
    },
  ],
]
`;

exports[`CompressionPlugin should work and show compress assets in stats: errors 1`] = `Array []`;

exports[`CompressionPlugin should work and show compress assets in stats: warnings 1`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed which filtered by the "minRation" option: assets 1`] = `
Array [
  Array [
    "icon.png",
    78117,
    Object {
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "icon.svg",
    672,
    Object {
      "related": Object {
        "gzipped": "icon.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "icon.svg.gz",
    393,
    Object {
      "compressed": true,
      "size": 393,
    },
  ],
  Array [
    "main.js",
    6071,
    Object {
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.js.gz",
      },
      "size": 6071,
    },
  ],
  Array [
    "main.js.gz",
    1594,
    Object {
      "compressed": true,
      "size": 1594,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed which filtered by the "minRation" option: assets 2`] = `
Array [
  Array [
    "icon.png",
    94117,
    Object {
      "related": Object {
        "gzipped": "icon.png.gz",
      },
      "size": 94117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "icon.png.gz",
    73309,
    Object {
      "compressed": true,
      "size": 73309,
    },
  ],
  Array [
    "icon.svg",
    672,
    Object {
      "related": Object {
        "gzipped": "icon.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "icon.svg.gz",
    393,
    Object {
      "compressed": true,
      "size": 393,
    },
  ],
  Array [
    "main.js",
    6071,
    Object {
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.js.gz",
      },
      "size": 6071,
    },
  ],
  Array [
    "main.js.gz",
    1594,
    Object {
      "compressed": true,
      "size": 1594,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed which filtered by the "minRation" option: errors 1`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed which filtered by the "minRation" option: errors 2`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed which filtered by the "minRation" option: warnings 1`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed which filtered by the "minRation" option: warnings 2`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "main.js",
    6127,
    Object {
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.js.gz",
      },
      "size": 6127,
    },
  ],
  Array [
    "main.js.gz",
    1660,
    Object {
      "compressed": true,
      "size": 1660,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed: assets 2`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "main.js",
    6164,
    Object {
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.js.gz",
      },
      "size": 6164,
    },
  ],
  Array [
    "main.js.gz",
    1684,
    Object {
      "compressed": true,
      "size": 1684,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed: errors 1`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed: errors 2`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed: warnings 1`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" and the asset has been changed: warnings 2`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" with multiple plugins: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "related": Object {
        "customed": "09a1a1112c577c2794359715edfcb5ac.png.custom",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png.custom",
    78117,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 78117,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "brotliCompressed": "23fc1d3ac606d117e05a140e0de79806.svg.br",
        "customed": "23fc1d3ac606d117e05a140e0de79806.svg.custom",
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.br",
    363,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 363,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.custom",
    672,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 672,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "main.js",
    6127,
    Object {
      "javascriptModule": false,
      "related": Object {
        "brotliCompressed": "main.js.br",
        "customed": "main.js.custom",
        "gzipped": "main.js.gz",
      },
      "size": 6127,
    },
  ],
  Array [
    "main.js.br",
    1407,
    Object {
      "compressed": true,
      "size": 1407,
    },
  ],
  Array [
    "main.js.custom",
    6127,
    Object {
      "compressed": true,
      "size": 6127,
    },
  ],
  Array [
    "main.js.gz",
    1660,
    Object {
      "compressed": true,
      "size": 1660,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" with multiple plugins: assets 2`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "related": Object {
        "customed": "09a1a1112c577c2794359715edfcb5ac.png.custom",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png.custom",
    78117,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 78117,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "brotliCompressed": "23fc1d3ac606d117e05a140e0de79806.svg.br",
        "customed": "23fc1d3ac606d117e05a140e0de79806.svg.custom",
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.br",
    363,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 363,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.custom",
    672,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 672,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "main.js",
    6127,
    Object {
      "javascriptModule": false,
      "related": Object {
        "brotliCompressed": "main.js.br",
        "customed": "main.js.custom",
        "gzipped": "main.js.gz",
      },
      "size": 6127,
    },
  ],
  Array [
    "main.js.br",
    1407,
    Object {
      "compressed": true,
      "size": 1407,
    },
  ],
  Array [
    "main.js.custom",
    6127,
    Object {
      "compressed": true,
      "size": 6127,
    },
  ],
  Array [
    "main.js.gz",
    1660,
    Object {
      "compressed": true,
      "size": 1660,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" with multiple plugins: errors 1`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" with multiple plugins: errors 2`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" with multiple plugins: warnings 1`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true" with multiple plugins: warnings 2`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true": assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "main.js",
    6127,
    Object {
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.js.gz",
      },
      "size": 6127,
    },
  ],
  Array [
    "main.js.gz",
    1660,
    Object {
      "compressed": true,
      "size": 1660,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true": assets 2`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "main.js",
    6127,
    Object {
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.js.gz",
      },
      "size": 6127,
    },
  ],
  Array [
    "main.js.gz",
    1660,
    Object {
      "compressed": true,
      "size": 1660,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true": errors 1`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true": errors 2`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true": warnings 1`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache when the "cache" option is "true": warnings 2`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache without options in the "development" mode: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "main.2cdb78a69ceab38200ad.js",
    6127,
    Object {
      "chunkhash": "2cdb78a69ceab38200ad",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.2cdb78a69ceab38200ad.js.gz",
      },
      "size": 6127,
    },
  ],
  Array [
    "main.2cdb78a69ceab38200ad.js.gz",
    1660,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 1660,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache without options in the "development" mode: assets 2`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "main.2cdb78a69ceab38200ad.js",
    6127,
    Object {
      "chunkhash": "2cdb78a69ceab38200ad",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.2cdb78a69ceab38200ad.js.gz",
      },
      "size": 6127,
    },
  ],
  Array [
    "main.2cdb78a69ceab38200ad.js.gz",
    1660,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 1660,
    },
  ],
]
`;

exports[`CompressionPlugin should work and use memory cache without options in the "development" mode: errors 1`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache without options in the "development" mode: errors 2`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache without options in the "development" mode: warnings 1`] = `Array []`;

exports[`CompressionPlugin should work and use memory cache without options in the "development" mode: warnings 2`] = `Array []`;

exports[`CompressionPlugin should work child compilations: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "copied.js",
    400,
    Object {
      "copied": true,
      "related": Object {
        "gzipped": "copied.js.gz",
      },
      "size": 400,
    },
  ],
  Array [
    "copied.js.gz",
    29,
    Object {
      "compressed": true,
      "size": 29,
    },
  ],
  Array [
    "main.js.gz",
    1658,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 1658,
    },
  ],
  Array [
    "main.js?var=cf763bde1716526ac600",
    6123,
    Object {
      "fullhash": "cf763bde1716526ac600",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.js.gz",
      },
      "size": 6123,
    },
  ],
]
`;

exports[`CompressionPlugin should work child compilations: errors 1`] = `Array []`;

exports[`CompressionPlugin should work child compilations: warnings 1`] = `Array []`;

exports[`CompressionPlugin should work with 'webpack-stats-plugin': assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "main.2cdb78a69ceab38200ad.js",
    6127,
    Object {
      "chunkhash": "2cdb78a69ceab38200ad",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.2cdb78a69ceab38200ad.js.gz",
      },
      "size": 6127,
    },
  ],
  Array [
    "main.2cdb78a69ceab38200ad.js.gz",
    1660,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 1660,
    },
  ],
  Array [
    "stats.json",
    89,
    Object {
      "size": 89,
    },
  ],
]
`;

exports[`CompressionPlugin should work with 'webpack-stats-plugin': errors 1`] = `Array []`;

exports[`CompressionPlugin should work with 'webpack-stats-plugin': warnings 1`] = `Array []`;

exports[`CompressionPlugin should work with assets info: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "copied.js",
    400,
    Object {
      "copied": true,
      "related": Object {
        "gzipped": "copied.js.gz",
      },
      "size": 400,
    },
  ],
  Array [
    "copied.js.gz",
    29,
    Object {
      "compressed": true,
      "size": 29,
    },
  ],
  Array [
    "main.js.gz",
    1703,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 1703,
    },
  ],
  Array [
    "main.js.map.gz",
    1721,
    Object {
      "compressed": true,
      "size": 1721,
    },
  ],
  Array [
    "main.js.map?var=e096f4cd2e1acddfc062",
    4632,
    Object {
      "development": true,
      "related": Object {
        "gzipped": "main.js.map.gz",
      },
      "size": 4632,
    },
  ],
  Array [
    "main.js?var=e096f4cd2e1acddfc062",
    6185,
    Object {
      "fullhash": "e096f4cd2e1acddfc062",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.js.gz",
        "sourceMap": "main.js.map?var=e096f4cd2e1acddfc062",
      },
      "size": 6185,
    },
  ],
]
`;

exports[`CompressionPlugin should work with assets info: errors 1`] = `Array []`;

exports[`CompressionPlugin should work with assets info: warnings 1`] = `Array []`;

exports[`CompressionPlugin should work with multiple plugins: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "related": Object {
        "compressed": "09a1a1112c577c2794359715edfcb5ac.png.compress",
        "customed": "09a1a1112c577c2794359715edfcb5ac.png.custom?foo=bar#hash",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png.compress",
    78117,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 78117,
    },
  ],
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png.custom?foo=bar#hash",
    78117,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 78117,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "brotliCompressed": "23fc1d3ac606d117e05a140e0de79806.svg.br",
        "compressed": "23fc1d3ac606d117e05a140e0de79806.svg.compress",
        "customed": "23fc1d3ac606d117e05a140e0de79806.svg.custom?foo=bar#hash",
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.br",
    363,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 363,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.compress",
    672,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 672,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.custom?foo=bar#hash",
    672,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 672,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "main.js.br",
    1407,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 1407,
    },
  ],
  Array [
    "main.js.compress",
    6127,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 6127,
    },
  ],
  Array [
    "main.js.custom?foo=bar#hash",
    6127,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 6127,
    },
  ],
  Array [
    "main.js.gz",
    1660,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 1660,
    },
  ],
  Array [
    "main.js?var=84068698136b49426631",
    6127,
    Object {
      "fullhash": "84068698136b49426631",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "brotliCompressed": "main.js.br",
        "compressed": "main.js.compress",
        "customed": "main.js.custom?foo=bar#hash",
        "gzipped": "main.js.gz",
      },
      "size": 6127,
    },
  ],
]
`;

exports[`CompressionPlugin should work with multiple plugins: errors 1`] = `Array []`;

exports[`CompressionPlugin should work with multiple plugins: warnings 1`] = `Array []`;

exports[`CompressionPlugin should work: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "main.js.gz",
    1660,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 1660,
    },
  ],
  Array [
    "main.js?var=84068698136b49426631",
    6127,
    Object {
      "fullhash": "84068698136b49426631",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.js.gz",
      },
      "size": 6127,
    },
  ],
]
`;

exports[`CompressionPlugin should work: errors 1`] = `Array []`;

exports[`CompressionPlugin should work: warnings 1`] = `Array []`;
